Sort suggestions and remove package and module from them